--- a/css/style.css
+++ b/css/style.css
@@ -8,21 +8,49 @@ body {
     background: #fafafa;
 }
 
+.error {
+    position: absolute;
+    width: 25%;
+    top: 5%;
+    left: 37.5%;
+    height: 2em;
+    color: #D8000C;
+    background-color: #FFD2D2;
+    border-radius: 0.4em;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.error>div{
+    line-height: 2em;
+}
+
 .container {
     position: fixed;
     width: 25%;
     top: 50%;
     left: 50%;
-    height: 350px;
+    height: 500px;
+    background: #fff;
     border: 1px solid #ebebeb;
     box-shadow: rgba(0, 0, 0, 0.14902) 0 1px 1px 0, rgba(0, 0, 0, 0.09804) 0 1px 2px 0;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
 
+.container>img{
+    position: absolute;
+    left: 50%;
+    width: 150px;
+    height: 150px;
+    margin-left: -75px;
+    margin-top: 10px;
+}
+
 .form {
+    padding-top: 150px;
     width: 100%;
-    height: 100%;
+    height: 350px;
     margin: 0 auto;
     background-color: #fff;
 }
@@ -75,6 +103,7 @@ body {
         width: 30%;
     }
 }
+
 
 @media(max-width:960px) {
     .container {
